<resources>
    <string name="app_name">J A V A I S T</string>
    <string name="title_learn">L E A R N</string>
    <string name="title_app">J A V A I S T</string>
    <string name="button_learn">LEARN</string>
    <string name="title_quiz">Q U I Z</string>
    <string name="detail_learn">Start Learning Your Java Now</string>
    <string name="detail_test">Start Testing Your Java Now</string>
    <string name="button_test">TEST</string>
    <string name="java_if_else">I F - E L S E</string>
    <string name="java_if_else2">Start Learning Your If-Else Statements Now</string>
    <string name="java_loops">L O O P S</string>
    <string name="java_loops2">Start Learning Your Java Loops Now</string>
    <string name="button_start">START</string>
    <string name="question_tv">QUESTIONS QUESTIONS QUESTIONS QUESTIONS QUESTIONS QUESTIONS</string>
    <string name="test_name">IF-ELSE and LOOPS</string>
    <string name="test_details">Test your If-Else statements, and Loops now </string>
    <string name="button_back">BACK</string>
    <string name="button_next">NEXT</string>
    <string name="button_menu">MENU</string>
    <string name="button_skip">SKIP</string>
    <string name="if_else_desc">An if statement can be followed by an optional else statement, which executes when the Boolean expression is false.</string>
    <string name="loop_desc">A loop is a programming function that iterates a statement or condition based on specified boundaries.
        The loop function uses almost identical logic and syntax in all programming languages.</string>
</resources>