<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbgfade"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#fefefe"
        android:textSize="36sp"
         />

    <TextView
        android:id="@+id/learn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_below="@id/appName"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_learn"
        android:textColor="#fefefe"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/learn_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/learn_view"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/detail_learn"
        android:textColor="#fefefe"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/learn_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/learn_view2"
        android:layout_marginTop="16dp"
        android:text="@string/button_learn"
        android:textColor="#fefefe"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/quiz_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/learn_button"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_quiz"
        android:textColor="#fefefe"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/quiz_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/quiz_view"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/detail_test"
        android:textColor="#fefefe"
        android:textSize="18sp"
         />

    <Button
        android:id="@+id/test_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/quiz_view2"
        android:layout_marginTop="16dp"
        android:text="@string/button_test"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="#fefefe"
        android:textSize="14sp"
        />


</RelativeLayout>