<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testmenubg"
    tools:context=".LearnLoopActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/learn_pg_title"
        android:text="@string/title_learn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#fefefe"
        android:textSize="36sp"/>


    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/learn_loop_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/learn_pg_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/learn_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/learn_loop_view"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:isScrollContainer="true"
        android:text="@string/loop_desc"
        android:textColor="#fefefe"
        android:textSize="14sp"
        tools:isScrollContainer="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/learn_desc_text"
        android:layout_marginStart="32dp"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/button_loop_back"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#fefefe"
            android:textSize="14sp"
            />

        <Button
            android:id="@+id/button_loop_test"
            style="@android:style/Widget.Holo.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="@string/button_test"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="#fefefe"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>